a list of orders can now be shown

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name":         "Shopkeeper",
+  "name":         "Storekeeper",
   "description":  "webshop admin ui",
   "homepage":     "http://shopkeep.er",
   "version":      "0.0.1",
   "author":       "Simon Højberg <r.hackr@gmail.com> (http://github.com/hojberg)",
   "scripts": {
-    "test": "yeti tests/runner.html --solo"
+    "test": "yeti tests/runner.html --solo",
+    "templates": "handlebars public/js/app/views/templates/ -r public/js/app/views/templates/ -f public/js/app/views/templates/compiled.js"
   },
   "dependencies": {
     "express":  ">=2.4.0 <2.5.0",
