--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express":  ">=2.4.0 <2.5.0",
-    "handlebars": ">=1.0.2beta"
+    "handlebars": ">=1.0.2beta",
+    "yeti": ">=0.1.8"
   }
 }
